--- a/index.html
+++ b/index.html
@@ -84,62 +84,70 @@
 <section class="tools">
   <div class="container grid">
 
-    <!-- Tool Card 1: Free RAID -->
-    <a href="/raid/index.html" class="card-link">
-      <div class="card">
-        <h3>Ronnie’s RAID Extractor™ (Free)</h3>
-        <span class="badge live">Live</span>
-        <p>Paste or upload transcripts and auto-extract 
-          <strong>⚠ Risks, ✅ Actions, 🛑 Issues, 📌 Decisions</strong> in seconds.</p>
-        <div class="card-actions">
-          <span class="button primary">Open</span>
-          <span class="button ghost">Docs</span>
-        </div>
-      </div>
-    </a>
-
-    <!-- Tool Card 2: Pro RAID -->
-    <a href="/raid-pro/index.html" class="card-link">
-      <div class="card">
-        <h3>Ronnie’s RAID Extractor™ (Pro)</h3>
-        <span class="badge pro">Pro</span>
-        <p>Unlock <strong>RAID history, Excel/PDF export, and saved logs</strong>. 
-          Includes early access to analytics and AI summaries.</p>
-        <div class="card-actions">
-          <span class="button primary">Launch Pro</span>
-          <span class="button ghost">Upgrade</span>
-        </div>
-      </div>
-    </a>
-
-    <!-- Tool Card 3: Status Report Generator -->
-    <a href="/notify/status-report.html" class="card-link">
-      <div class="card">
-        <h3>Status Report Generator</h3>
-        <span class="badge soon">Q4 2025</span>
-        <p>Create <strong>VP-ready summaries</strong> in PDF or Markdown with one click. 
-          Designed for executive reporting.</p>
-        <div class="card-actions">
-          <span class="button ghost">Notify Me</span>
-        </div>
-      </div>
-    </a>
-
-    <!-- Tool Card 4: Risk Radar -->
-    <a href="/notify/risk-radar.html" class="card-link">
-      <div class="card">
-        <h3>Risk Radar</h3>
-        <span class="badge soon">Coming Soon</span>
-        <p>Auto-detect critical project risks — with <strong>AI-backed mitigation tips</strong> 
-          to keep delivery on track.</p>
-        <div class="card-actions">
-          <span class="button ghost">Notify Me</span>
-        </div>
-      </div>
-    </a>
-
+   <!-- Tool Card 1: Free RAID -->
+<a href="/raid/index.html" class="card-link">
+  <div class="card">
+    <h3>Ronnie’s RAID Extractor™ (Free)</h3>
+    <span class="badge live">Live</span>
+    <p>Paste or upload transcripts and auto-extract 
+      <strong>⚠ Risks, ✅ Actions, 🛑 Issues, 📌 Decisions</strong> in seconds.</p>
+    <div class="card-actions">
+      <span class="button primary">Open Free</span>
+    </div>
   </div>
-</section>
+</a>
+
+<!-- Tool Card 2: Pro RAID -->
+<a href="/raid-pro/index.html" class="card-link">
+  <div class="card">
+    <h3>Ronnie’s RAID Extractor™ (Pro)</h3>
+    <span class="badge pro">Pro</span>
+    <p>Unlock <strong>RAID history, multi-format export, and saved logs</strong>. 
+      Includes AI-powered resolution suggestions.</p>
+    <div class="card-actions">
+      <span class="button primary">Open Pro</span>
+    </div>
+  </div>
+</a>
+
+<!-- Tool Card 3: Meeting Analyzer -->
+<a href="/meeting-analyzer/index.html" class="card-link">
+  <div class="card">
+    <h3>Ronnie’s Meeting Analyzer™</h3>
+    <span class="badge soon">Coming Soon</span>
+    <p>Summarize meeting notes, draft <strong>task lists</strong>, 
+      and auto-generate a <strong>next-week agenda</strong>.</p>
+    <div class="card-actions">
+      <span class="button ghost">Notify Me</span>
+    </div>
+  </div>
+</a>
+
+<!-- Tool Card 4: Status Report Generator -->
+<a href="/notify/status-report.html" class="card-link">
+  <div class="card">
+    <h3>Status Report Generator</h3>
+    <span class="badge soon">Q4 2025</span>
+    <p>Create <strong>VP-ready summaries</strong> in PDF or Markdown 
+      with one click. Designed for executive reporting.</p>
+    <div class="card-actions">
+      <span class="button ghost">Notify Me</span>
+    </div>
+  </div>
+</a>
+
+<!-- Tool Card 5: Risk Radar -->
+<a href="/notify/risk-radar.html" class="card-link">
+  <div class="card">
+    <h3>Risk Radar</h3>
+    <span class="badge soon">Coming Soon</span>
+    <p>Auto-detect critical project risks — with 
+      <strong>AI-backed mitigation tips</strong> to keep delivery on track.</p>
+    <div class="card-actions">
+      <span class="button ghost">Notify Me</span>
+    </div>
+  </div>
+</a>
 
   <!-- Footer -->
   <footer class="footer-min">
