--- a/apps.html
+++ b/apps.html
@@ -125,7 +125,7 @@
               Summarize meeting notes, draft <strong>task lists</strong>, and auto-generate a <strong>next-week agenda</strong>.
             </p>
             <div class="card-actions">
-              <a class="button ghost" href="/contact.html">Notify Me</a>
+              <a class="button ghost" href="/notify.html">Notify Me</a>
             </div>
           </article>
 
@@ -139,7 +139,7 @@
               Create <strong>VP-ready summaries</strong> in PDF or Markdown with one click. Designed for executive reporting.
             </p>
             <div class="card-actions">
-              <a class="button ghost" href="/contact.html">Notify Me</a>
+              <a class="button ghost" href="/notify.html">Notify Me</a>
             </div>
           </article>
 
@@ -153,7 +153,7 @@
               Auto-detect critical project risks — with <strong>AI-backed mitigation tips</strong> to keep delivery on track.
             </p>
             <div class="card-actions">
-              <a class="button ghost" href="/contact.html">Notify Me</a>
+              <a class="button ghost" href="/notify.html">Notify Me</a>
             </div>
           </article>
 
