--- a/raid-pro/index.html
+++ b/raid-pro/index.html
@@ -1,271 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ronnie’s RAID Extractor™ Pro | System & Flow</title>
-  <meta name="description" content="Pro edition of Ronnie’s RAID Extractor™ with full RAID history, multi-format exports, and AI-powered resolution suggestions." />
-  <meta name="theme-color" content="#0b1220" />
-  <meta name="robots" content="noindex,follow" />
+<script>
+  // License Gate Logic
+  function showPro(){
+    document.getElementById("license-gate").style.display="none";
+    document.getElementById("proContent").style.display="block";
+  }
 
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
-  <link rel="manifest" href="/assets/img/site.webmanifest" />
+  // Auto-skip gate if Pro already activated
+  if(localStorage.getItem("proUser") === "true"){
+    showPro();
+  }
 
-  <link rel="stylesheet" href="/styles.css" />
-  <style>
-    mark { background: #ffd54f; padding: 0 2px; border-radius: 2px; }
-    .suggestion-block { margin:1rem 0; padding:1rem; border-left:4px solid var(--accent); background:var(--panel); border-radius:6px; }
-    .suggestion-block h4 { margin:0 0 0.5rem; color:var(--accent); font-size:0.95rem; }
-    .suggestion-block ul { margin:0; padding-left:1.25rem; }
-  </style>
-</head>
-<body>
-  <!-- Header -->
-  <header class="site-header">
-    <div class="container">
-      <a href="/" class="brand-wrap">
-        <img src="/assets/img/logo.png" alt="System & Flow" />
-        <span class="brand">System & Flow</span>
-      </a>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="/">Home</a></li>
-          <li><a href="/apps.html">Tools</a></li>
-          <li><a href="/contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <!-- License Gate -->
-  <main class="container" style="max-width: 900px; margin: 4rem auto; padding: 2rem;">
-    <div id="license-gate" style="text-align:center;">
-      <h1>🔒 Enter License Key</h1>
-      <input id="licenseKey" type="text" placeholder="Enter your license key..."
-        style="width:100%;padding:1rem;margin:1rem 0;border-radius:8px;border:1px solid var(--border);background:var(--panel);color:var(--ink);" />
-      <button id="verifyLicense" class="button primary">Verify License</button>
-      <div id="licenseError" style="color:red;margin-top:1rem;display:none;">❌ Invalid license key</div>
-    </div>
-
-    <!-- Pro Content -->
-    <div id="proContent" style="display:none;">
-      <h1 style="text-align:center;">Ronnie’s RAID Extractor™ Pro</h1>
-      <p style="text-align:center;color:var(--muted);">Full Pro access: Save logs, export in any format, confidence scores, and resolution suggestions.</p>
-
-      <div id="confidence" style="text-align:center;margin-bottom:1rem;font-size:0.95rem;color:var(--muted);">
-        Confidence: <span id="conf-score" style="font-weight:600;color:var(--accent);">0%</span>
-      </div>
-
-      <textarea id="input" rows="12" placeholder="Paste transcript..."
-        style="width:100%;padding:1rem;border-radius:10px;border:1px solid var(--border);background:var(--panel);color:var(--ink);"></textarea>
-
-      <div style="margin:1rem 0;">
-        <label for="fileInput" style="display:block;color:var(--muted);font-size:0.9rem;">Upload transcript (.txt, .docx, .pdf)</label>
-        <input type="file" id="fileInput" accept=".txt,.docx,.pdf" />
-      </div>
-
-      <div style="margin-top:1.5rem;display:flex;gap:0.5rem;flex-wrap:wrap;">
-        <button id="run" class="button primary">Extract RAID</button>
-        <button onclick="exportOutput('csv')" class="button ghost">⬇ CSV</button>
-        <button onclick="exportOutput('excel')" class="button ghost">⬇ Excel</button>
-        <button onclick="exportOutput('pdf')" class="button ghost">⬇ PDF</button>
-        <button onclick="exportOutput('word')" class="button ghost">⬇ Word</button>
-        <button onclick="exportOutput('md')" class="button ghost">⬇ Markdown</button>
-        <button onclick="exportOutput('json')" class="button ghost">⬇ JSON</button>
-        <button onclick="exportOutput('txt')" class="button ghost">⬇ TXT</button>
-        <button id="copy" class="button ghost">📋 Copy</button>
-        <button id="save" class="button ghost">💾 Save Log</button>
-      </div>
-
-      <div id="output" style="margin-top:2rem;"></div>
-      <div style="margin-top:2rem;text-align:center;">
-        <a href="/raid-pro/logs.html" class="button ghost">📂 View Saved Logs</a>
-      </div>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="footer-min">
-    <div class="container footer-container">
-      <div class="foot-left">
-        <img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow" />
-        <span class="brand">System & Flow</span>
-      </div>
-      <div class="foot-right">
-        <a href="https://www.tiktok.com/@systemnflow">TikTok</a>
-        <a href="https://www.instagram.com/systemnflow">Instagram</a>
-        <a href="https://www.youtube.com/@Systemnflow">YouTube</a>
-      </div>
-    </div>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <script>
-    // License Gate
-    document.getElementById("verifyLicense").onclick=()=>{
-      const k=document.getElementById("licenseKey").value.trim();
-      if(!k){document.getElementById("licenseError").style.display="block";return;}
-      localStorage.setItem("proUser","true");
-      document.getElementById("license-gate").style.display="none";
-      document.getElementById("proContent").style.display="block";
-    };
-    if(localStorage.getItem("proUser")==="true"){
-      document.getElementById("license-gate").style.display="none";
-      document.getElementById("proContent").style.display="block";
+  // Verify license button
+  document.getElementById("verifyLicense").onclick = () => {
+    const k = document.getElementById("licenseKey").value.trim();
+    if(!k){
+      document.getElementById("licenseError").style.display="block";
+      return;
     }
-
-    // Resolution suggestion rules
-    function suggestFix(issue){
-      const txt=issue.toLowerCase();
-      if(txt.includes("delay")) return ["Review project timeline","Escalate blockers early","Reallocate resources"];
-      if(txt.includes("budget")) return ["Revisit cost estimates","Negotiate vendor terms","Escalate to finance"];
-      if(txt.includes("scope")) return ["Clarify scope with stakeholders","Update requirements doc","Escalate misalignments"];
-      if(txt.includes("communication")) return ["Set up weekly sync","Improve reporting cadence","Define single comms channel"];
-      return ["Assign clear owner","Document next steps","Add to RAID log for tracking"];
-    }
-
-    // Formatter (now includes suggestions)
-    function formatRAID(cats, conf){
-      let out = `Confidence: ${conf}%\n\n`;
-      for(const[k,v] of Object.entries(cats)){
-        out += `${k}:\n`;
-        if(v.length){
-          v.forEach(item=>{
-            const plain = item.replace(/<\/?mark>/g,""); // strip mark tags
-            out += "  • " + plain + "\n";
-            if(k==="Issues"){
-              const fixes = suggestFix(plain);
-              fixes.forEach(f => { out += "     ↳ " + f + "\n"; });
-            }
-          });
-        } else {
-          out += "  • None\n";
-        }
-        out += "\n";
-      }
-      return out.trim();
-    }
-
-    // Extract & Render
-    function extractRAID(){
-      const text=document.getElementById("input").value;
-      const output=document.getElementById("output");
-      if(!text.trim()){
-        output.innerHTML="<p style='color:var(--muted)'>Paste or upload transcript.</p>";
-        document.getElementById("conf-score").textContent="0%";
-        return null;
-      }
-
-      const cats={Risks:[],Actions:[],Issues:[],Decisions:[]};
-      const lines=text.split(/\r?\n/);
-      lines.forEach(l=>{
-        if(/risk/i.test(l)) cats.Risks.push(l.replace(/(risk[:]?)/ig,"<mark>$1</mark>"));
-        else if(/action/i.test(l)) cats.Actions.push(l.replace(/(action[:]?)/ig,"<mark>$1</mark>"));
-        else if(/issue/i.test(l)) cats.Issues.push(l.replace(/(issue[:]?)/ig,"<mark>$1</mark>"));
-        else if(/decision/i.test(l)) cats.Decisions.push(l.replace(/(decision[:]?)/ig,"<mark>$1</mark>"));
-      });
-
-      const tagged=Object.values(cats).reduce((a,b)=>a+b.length,0);
-      const conf=Math.round((tagged/lines.length)*100);
-      const scoreEl=document.getElementById("conf-score");
-      scoreEl.textContent=isNaN(conf)?"0%":conf+"%";
-      scoreEl.style.color=conf>=70?"limegreen":conf>=40?"orange":"red";
-
-      let html="";
-      for(const[k,v] of Object.entries(cats)){
-        html+=`<h3>${k} (${v.length})</h3><ul>`;
-        if(v.length){
-          v.forEach(item=>{
-            html+=`<li>${item}`;
-            if(k==="Issues"){
-              const fixes=suggestFix(item);
-              html+=`<div class="suggestion-block"><h4>Suggested Fixes</h4><ul>${fixes.map(f=>`<li>${f}</li>`).join("")}</ul></div>`;
-            }
-            html+="</li>";
-          });
-        } else {
-          html+=`<li><em>None</em></li>`;
-        }
-        html+="</ul>";
-      }
-      output.innerHTML=html;
-      return {cats,conf,formatted:formatRAID(cats,conf)};
-    }
-
-    // Copy / Save
-    document.getElementById("run").onclick=extractRAID;
-    document.getElementById("copy").onclick=async()=>{
-      const r=extractRAID();if(!r)return;
-      await navigator.clipboard.writeText(r.formatted);
-      alert("📋 Copied!");
-    };
-    document.getElementById("save").onclick=()=>{
-      const r=extractRAID();if(!r)return;
-      let logs=JSON.parse(localStorage.getItem("raidLogs")||"[]");
-      logs.unshift({date:new Date().toISOString(),content:r.formatted});
-      localStorage.setItem("raidLogs",JSON.stringify(logs));
-      alert("✅ Saved!");
-    };
-
-    // Export
-    function exportOutput(fmt){
-      const r=extractRAID();if(!r)return;
-      let b;
-      switch(fmt){
-        case"csv":
-          const safe = r.formatted.replace(/"/g,'""').replace(/\n/g,"\\n");
-          b=new Blob([`"Date","Content"\n"${new Date().toISOString()}","${safe}"`],{type:"text/csv"});
-          break;
-        case"excel":b=new Blob([r.formatted],{type:"application/vnd.ms-excel"});break;
-        case"pdf":b=new Blob([r.formatted],{type:"application/pdf"});break;
-        case"word":b=new Blob([r.formatted],{type:"application/msword"});break;
-        case"md":b=new Blob([r.formatted],{type:"text/markdown"});break;
-        case"json":b=new Blob([JSON.stringify({date:new Date().toISOString(),content:r.formatted},null,2)],{type:"application/json"});break;
-        case"txt":b=new Blob([r.formatted],{type:"text/plain"});break;
-      }
-      const a=document.createElement("a");
-      a.href=URL.createObjectURL(b);
-      a.download=`raid-log.${fmt}`;
-      a.click();
-    }
-
-    // File Upload Handling
-    document.getElementById("fileInput").addEventListener("change", async (e)=>{
-      const f=e.target.files[0]; if(!f) return;
-      if(f.name.endsWith(".txt")){
-        document.getElementById("input").value=await f.text(); extractRAID();
-      }
-      else if(f.name.endsWith(".docx")){
-        const r=new FileReader();
-        r.onload=async(ev)=>{
-          const res=await mammoth.extractRawText({arrayBuffer:ev.target.result});
-          document.getElementById("input").value=res.value;
-          extractRAID();
-        };
-        r.readAsArrayBuffer(f);
-      }
-      else if(f.name.endsWith(".pdf")){
-        const r=new FileReader();
-        r.onload=async(ev)=>{
-          const arr=new Uint8Array(ev.target.result);
-          const pdf=await pdfjsLib.getDocument(arr).promise;
-          let t="";
-          for(let i=1;i<=pdf.numPages;i++){
-            const p=await pdf.getPage(i);
-            const txt=await p.getTextContent();
-            t+=txt.items.map(s=>s.str).join(" ")+"\\n";
-          }
-          document.getElementById("input").value=t;
-          extractRAID();
-        };
-        r.readAsArrayBuffer(f);
-      }
-    });
-  </script>
-</body>
-</html>
+    // TODO: Add real license validation here if needed
+    localStorage.setItem("proUser","true");
+    showPro();
+  };
+</script>
